[package]
name = "fxd"
version = "0.1.0"
authors = ["jiangzhe <zhe.jiang@transwarp.io>"]
edition = "2018"

[profile.release]

[[bench]]
name = "bench_serde"
harness = false

[dependencies]
thiserror = "1.0"

[dev-dependencies]
criterion = "0.3"
rand = "0.8.4"
pprof = { version = "0.3", features = ["flamegraph"]}
