[package]
name = "fxd"
version = "0.1.1"
authors = ["jiangzhe <nju.jiangzhe@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Fixed-point decimal implementation"
keywords = ["decimal"]
categories = ["data-structures"]
repository = "https://github.com/jiangzhe/fxd-rs/"
readme = "README.md"

[profile.release]

[[bench]]
name = "bench_serde"
harness = false

[dependencies]
thiserror = "1.0"

[dev-dependencies]
criterion = "0.3"
rand = "0.8.4"
pprof = { version = "0.3", features = ["flamegraph"]}

